# Demo-app_buildtrace

./: .gitignore  ADD_REDIRECT_URI.md  ADD_REDIRECT_URI_NOW.md  AUTHENTICATION.md  AUTHENTICATION_FLOW.md  AUTH_FLOW_ANALYSIS.md  AUTH_FLOW_COMPLETE.md  BUILD_TRACE_MVP_COMPLETE.md  CHECK_JOB_STATUS.md  CLAUDE.md  DEBUGGING.md  DEBUG_OAUTH_ISSUE.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DIAGNOSE_JOBS.sh  FIX_FOREIGN_KEY_ERROR.md  FIX_FRONTEND_DEPLOYMENT.md  FIX_NOT_FOUND.md  FIX_REDIRECT_URI.md  FIX_WHITESPACE_REDIRECT_URI.md  FRONTEND_ERROR_FIXES.md  GOOGLE_AUTH_FIX.md  GOOGLE_AUTH_SETUP.md  GOOGLE_AUTH_SUMMARY.md  NEXT_STEPS_GOOGLE_AUTH.md  README.md  REDEPLOY_WITH_VALIDATION.md  REFACTOR_SUMMARY.md  SCHEMA_VALIDATION_SUMMARY.md  deploy-with-google-auth.sh  prompt  start-local.sh  test-features.mjs
Overlay-main/api/: Dockerfile  __init__.py  config.py  dependencies.py  init_db.py  main.py  models.py  pyproject.toml  reset_user_password.py
Overlay-main/api/routes/: alignment.py  analysis.py  auth.py  comparisons.py  drawings.py  google_auth.py  jobs.py  projects.py  uploads.py
Overlay-main/api/schemas/: __init__.py  auth.py  comparison.py  drawing.py  job.py  project.py  upload.py
Overlay-main/api/tests/: README.md  __init__.py  test_auth.py  test_jobs.py  test_uploads.py
Overlay-main/vision/worker/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  create_test_data.py  main.py  models.py  pyproject.toml  run_job_with_pdfs.py  run_overlay_job.py  run_test_job.py  test_overlay_methods.py  test_png_overlay.py  test_publish_job.py
Overlay-main/vision/worker/clients/: db.py  gemini.py  pubsub.py  storage.py
Overlay-main/vision/worker/docs/: overlay-improvements.md
Overlay-main/vision/worker/jobs/: block_overlay_generate.py  change_detect.py  clash_detect.py  cost_analysis.py  drawing_overlay_generate.py  drawing_preprocess.py  envelope.py  job_lifecycle.py  overlay_reports.py  registry.py  runner.py  sheet_overlay_generate.py  sheet_preprocess.py  types.py
Overlay-main/vision/worker/lib/: __init__.py  grid_alignment.py  identifier_extractor.py  llm_usage.py  ocr.py  overlay_render.py  pdf_converter.py  sheet_analyzer.py  sift_alignment.py
Overlay-main/vision/worker/scripts/: test_text_extraction.py
Overlay-main/vision/worker/scripts/align/: align_images.py
Overlay-main/vision/worker/scripts/analyze/: analyze_overlay.py  roi_based_analysis.py  roi_polygon_analysis.py
Overlay-main/vision/worker/scripts/convert/: compare_renderers.py  run_convert_job.py
Overlay-main/vision/worker/scripts/extract_foreground/: extract_foreground.py
Overlay-main/vision/worker/scripts/grid_align/: grid_align.py  grid_align_gemini.py
Overlay-main/vision/worker/scripts/manual_align/: manual_align.py  mask_green_overlay.py
Overlay-main/vision/worker/scripts/overlay/: generate_overlay.py  prototype_diff.py
Overlay-main/vision/worker/tests/: conftest.py
Overlay-main/vision/worker/tests/integration/: __init__.py  (+3 more)
Overlay-main/vision/worker/utils/: case_utils.py  id_utils.py  job_errors.py  job_events.py  log_utils.py  storage_utils.py
(+164 files in other folders)
